hw7 normal inheritance